@@ -100,26 +100,26 @@ template <class _CharT> class ctype_byname;
 template <class _CharT> class collate;
 template <class _CharT> class collate_byname;
 
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC ctype<char>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC ctype_byname<char>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC collate<char>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC collate_byname<char>;
+_STLP_TEMPLATE_NULL class ctype<char>;
+_STLP_TEMPLATE_NULL class ctype_byname<char>;
+_STLP_TEMPLATE_NULL class collate<char>;
+_STLP_TEMPLATE_NULL class collate_byname<char>;
 
 #if !defined (_STLP_NO_WCHAR_T)
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC ctype<wchar_t>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC ctype_byname<wchar_t>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC collate<wchar_t>;
-_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC collate_byname<wchar_t>;
+_STLP_TEMPLATE_NULL class ctype<wchar_t>;
+_STLP_TEMPLATE_NULL class ctype_byname<wchar_t>;
+_STLP_TEMPLATE_NULL class collate<wchar_t>;
+_STLP_TEMPLATE_NULL class collate_byname<wchar_t>;
 #endif
 
 #if !(defined (__SUNPRO_CC) && __SUNPRO_CC < 0x500 )
 // Typedefs for ordinary (narrow-character) streams.
-//_STLP_TEMPLATE_NULL class _STLP_CLASS_DECLSPEC basic_streambuf<char, char_traits<char> >;
+//_STLP_TEMPLATE_NULL class basic_streambuf<char, char_traits<char> >;
 #endif
 
-typedef basic_istream<char, char_traits<char> >   istream;
-typedef basic_ostream<char, char_traits<char> >   ostream;
-typedef basic_iostream<char, char_traits<char> >  iostream;
+typedef basic_istream<char, char_traits<char> >  istream;
+typedef basic_ostream<char, char_traits<char> >  ostream;
+typedef basic_iostream<char, char_traits<char> > iostream;
 typedef basic_streambuf<char,char_traits<char> > streambuf;
 
 typedef basic_stringbuf<char, char_traits<char>, allocator<char> >     stringbuf;
